overflowing issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -374,7 +374,7 @@ footer {
   }
 
   .highlights-img img {
-    width: 428px;
+    width: 328px;
     height: 248px;
   }
 
@@ -427,13 +427,13 @@ footer {
   }
 
   .highlights-img img {
-    width: 428px;
+    width: 328px;
     height: 248px;
   }
 
   .highlights-details {
     margin: 8px 0 24px 0;
-    width: 400px;
+    width: 350px;
     height: 113px;
   }
 }
